user-service/user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - port: 8082
      targetPort: 8082
      nodePort: 30080
