user-service/user-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: user-service.local
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8080
